--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,7 @@
 @import "tailwindcss";
+
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap');
+
+* {
+  font-family: 'JetBrains Mono', monospace;
+}
